--- a/core/templates/preview.tmpl
+++ b/core/templates/preview.tmpl
@@ -8,7 +8,7 @@
 
 %TMPL:DEF{"pagetitle"}%<nop>%TOPIC% (%MAKETEXT{"preview"}%)%TMPL:END%
 
-%TMPL:DEF{"alert"}%<h2 class="patternTemplateTitle twikiAlert">%MAKETEXT{"Do not forget to save your changes"}%</h2>%TMPL:END%
+%TMPL:DEF{"alert"}%<h2 class="twikiTemplateTitle twikiAlert">%MAKETEXT{"Do not forget to save your changes"}%</h2>%TMPL:END%
 
 %TMPL:DEF{"titleaction"}%(%MAKETEXT{"preview"}%) %TMPL:END%
 
