--- a/core/templates/settings.tmpl
+++ b/core/templates/settings.tmpl
@@ -13,7 +13,7 @@
 %TMPL:DEF{"topicactionbuttons"}%<input type="submit" class="twikiSubmit" name="action" value="Cancel" id="cancel" />%TMPL:P{"sep"}%<input type="submit" class="twikiSubmit" name="action" value="Update" id="checkpoint" />%TMPL:END%
 
 
-%TMPL:DEF{"formstart"}%<div class="patternFormHolder twistyMakeHidden" id="formHolder">
+%TMPL:DEF{"formstart"}%<div class="twikiFormHolder twistyMakeHidden" id="formHolder">
 <form name="main" action="%SCRIPTURLPATH{"manage"}%/%WEB%/%TOPIC%" method="post">
 <input type="hidden" name="action" value="saveSettings" />
 <input type="hidden" name="originalrev" value="%ORIGINALREV%" />
