Item128: case sensitive search for topic parentage
git-svn-id: http://svn.foswiki.org/trunk@595 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/templates/oopsmore.tmpl
+++ b/core/templates/oopsmore.tmpl
@@ -48,7 +48,7 @@
 <form name="main" action="%SCRIPTURLPATH{"save"}%/%WEB%/%TOPIC%?action_save=1">
 <div class="twikiFormSteps">
 <div class="twikiFormStep">
----++!! %MAKETEXT{"Current parent:"}% %IF{"'NONE%SEARCH{ "^%TOPIC%$" scope="topic" regex="on" nosearch="on" nototal="on" format="$parent" }%'='NONE'" then="(none)" else='%SEARCH{ "^%TOPIC%$" scope="topic" regex="on" nosearch="on" nototal="on" format="[[$web.$parent][$parent]]" }%' }%
+---++!! %MAKETEXT{"Current parent:"}% %IF{"'NONE%SEARCH{ "^%TOPIC%$" casesensitive="on" scope="topic" regex="on" nosearch="on" nototal="on" format="$parent" }%'='NONE'" then="(none)" else='%SEARCH{ "^%TOPIC%$" scope="topic" regex="on" nosearch="on" nototal="on" format="[[$web.$parent][$parent]]" }%' }%
 </div>
 <div class="twikiFormStep">
 ---+++!! %MAKETEXT{"Select topic parent:"}%
