--- a/JQueryPlugin/pub/TWiki/JQueryPlugin/jquery.twiki.css
+++ b/JQueryPlugin/pub/TWiki/JQueryPlugin/jquery.twiki.css
@@ -1,69 +1,46 @@
 /* buttons */
-.jqButton { 
-  float:left;
-  vertical-align:middle;
-  position: relative;
-  padding: 5px;
-  text-decoration: none !important;
-  cursor: pointer;
-  text-align:center;
-  margin-right:5px;
-}
-.jqButton i,
-.jqButton span {
-  font-style: normal;
-  background-image: url(button1.png);
-  background-repeat: no-repeat;
-  display: block;
-  position: relative;
-}
-.jqButton i { 
-  background-position: top left;
-  position: absolute;
-  margin-bottom: -5px;
-  top: 0;
-  left: 0;
-  width: 5px;
-  height: 5px;
-}
-.jqButton span {
-  background-position: bottom left;
-  left: -5px;
-  padding: 0 0 5px 10px;
-  margin-bottom: -5px;
-}
-.jqButton span i {
-  background-position: bottom right;
-  margin-bottom: 0;
-  position: absolute;
-  left: 100%;
-  width: 10px;
-  height: 100%;
-  top: 0;
-}
-.jqButton span span {
-  background-position: top right;
-  position: absolute; 
-  right: -10px; 
-  margin-left: 10px; 
-  top: -5px; 
-  height: 0;
-}
-.jqButton.blue { background-color: #2ae; color:white; }
-.jqButton.green { background-color: #9d4; color:white;}
-.jqButton.pink { background-color: #e1a; color:white;}
-.jqButton:hover { 
-  background-color: #a00 !important;
+.jqButton:hover,
+.jqButton {
+  background-color:inherit;
+  background-image:url(btn_right.gif);
+  background-position:top right;
+  background-repeat:no-repeat;
   text-decoration:none;
-  color:white;
+  cursor:pointer;
+  display:block;
+  float:left;
+  height:23px;
+  padding:0px;
+  margin:0px 8px 0px 0px;
+  color:black;
 }
-.jqButton:active { background-color: #444; }
-.jqButton[class]:hover,
-.jqButton[class] { 
-  background-image: url(shade1.png); 
-  background-position: bottom; 
-  color:white;
+.jqButton:hover {
+  color:red;
 }
+.jqButton span {
+  background-image:url(btn_left.gif);
+  background-position:top left;
+  background-repeat:no-repeat;
+  cursor:pointer;
+  display:block;
+  float:left;
+  height:23px;
+  line-height:23px;
+  padding:0px 8px;
+  margin:0px 3px 0px 0px;
+  _margin:0px 1px 0px 0px;
+}
+.jqButton .jqButtonIcon {
+  background-position:0px 4px;
+  background-repeat:no-repeat;
+  padding:0px 0px 0px 20px;
+}
+.jqButton.cyan { background-image:url(btn_cyan_right.gif); }
+.jqButton.cyan span { background-image:url(btn_cyan_left.gif); }
+.jqButton.red  { background-image:url(btn_red_right.gif); }
+.jqButton.red span { background-image:url(btn_red_left.gif); }
+.jqButton.green { background-image:url(btn_green_right.gif); }
+.jqButton.green span { background-image:url(btn_green_left.gif); }
 
 /* IE compensation */
 * html .jqButton span, * html .jqButton i {
@@ -109,6 +86,8 @@
 #tooltip div { 
   margin: 0; 
   overflow:hidden;
+  color:black;
+  font-size:11px;
 }
 
 #tooltip.twiki {
@@ -120,14 +99,35 @@
   color:black;
 }
 #tooltip.twiki h3 {
-  font-size:11px;
   text-align: center;
   border:0px;
 }
 #tooltip.twiki div { 
-  font-size:11px;
   margin-top:5px;
   text-align: left; 
+}
+#tooltip.bubble {
+  opacity: 0.9;
+  background-image: url('tooltip-bubble.png');
+  background-repeat:no-repeat;
+  padding:5em 1em 1em 1em;
+  height:100px;
+  width:220px;
+  font-family:Arial,sans-serif;
+}
+#tooltip.bubble.viewport-right {
+  background: url('tooltip-bubble-reverse.png');
+}
+#tooltip.bubble h3 {
+  font-size:13px;
+  font-weight:bold;
+  border-bottom:1px solid #ddd;
+  padding:0px 0px 2px 0px;
+  margin:0px 0px 2px 0px;
+}
+#tooltip.bubble div {
+  width: 220px; 
+  text-align: left;
 }
 
 /* treeview plugin */
