Item109: Rename TWikiForms to DataForms
git-svn-id: http://svn.foswiki.org/trunk@604 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/templates/messages.tmpl
+++ b/core/templates/messages.tmpl
@@ -317,7 +317,7 @@ __%MAKETEXT{"Note:"}%__
 %TMPL:END%
 %TMPL:DEF{"no_form_def"}%
 ---+++ %MAKETEXT{"Form Definition [_1] missing" args="%PARAM1%.<nop>%PARAM2%"}%
-%MAKETEXT{"See [_1] for information about Form Definitions." args="%SYSTEMWEB%.TWikiForms"}%
+%MAKETEXT{"See [_1] for information about Form Definitions." args="%SYSTEMWEB%.DataForms"}%
 
 %MAKETEXT{"This could be for several reasons:"}%
 
