Item109: Changing TWikiTutorial to TwentyMinuteTutorial
git-svn-id: http://svn.foswiki.org/trunk@619 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/templates/registernotify.tmpl
+++ b/core/templates/registernotify.tmpl
@@ -7,7 +7,7 @@ Content-Transfer-Encoding: 8bit
 
 %MAKETEXT{"Thank you for registering in the [_1] collaboration platform. Please save this e-mail for future reference." args="%WIKITOOLNAME%"}%
 
-%MAKETEXT{"Read [_1] to get a quick overview of this collaboration platform. To learn more, study the TWikiTutorial, which is accessible from the same link." args="%SCRIPTURL{"view"}%/%SYSTEMWEB%/WelcomeGuest"}%
+%MAKETEXT{"Read [_1] to get a quick overview of this collaboration platform. To learn more, study the TwentyMinuteTutorial, which is accessible from the same link." args="%SCRIPTURL{"view"}%/%SYSTEMWEB%/WelcomeGuest"}%
 
 %MAKETEXT{"Your personal [_1] topic is located at [_2]. You can customize it as you like:" args="%WIKITOOLNAME%, %SCRIPTURL{"view"}%/%USERSWEB%/%WIKINAME%"}%
 
