Item109: Finishing the TWikiTemplates to SkinTemplates and TemplateTopics split
git-svn-id: http://svn.foswiki.org/trunk@658 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/templates/css.tmpl
+++ b/core/templates/css.tmpl
@@ -8,12 +8,12 @@
 
 
 %TMPL:DEF{"twikibase"}%<style type="text/css" media="all">
-@import url('%PUBURLPATH%/%SYSTEMWEB%/TWikiTemplates/base.css');
+@import url('%PUBURLPATH%/%SYSTEMWEB%/SkinTemplates/base.css');
 </style>%TMPL:END%
 
 
 %TMPL:DEF{"twikistyle"}%<style type="text/css" media="all">
-@import url('%PUBURLPATH%/%SYSTEMWEB%/TWikiTemplates/default.css');
+@import url('%PUBURLPATH%/%SYSTEMWEB%/SkinTemplates/default.css');
 </style>%TMPL:END%
 
 
