Item109: TWikiGuest -> WikiGuest
git-svn-id: http://svn.foswiki.org/trunk@666 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/templates/messages.tmpl
+++ b/core/templates/messages.tmpl
@@ -44,7 +44,7 @@
 ---+++ %MAKETEXT{"Can't find user [_1]" args="%PARAM1%"}%
 %MAKETEXT{"Please make sure you spelled the [_1] correctly and try again. If you get stuck, please mail [_2]." args="%SYSTEMWEB%.LoginName, %WIKIWEBMASTER%"}%
 
-%MAKETEXT{"See [_1] for a list of existing users or register as new user in [_2]." args="%USERSWEB%.TWikiUsers, %SYSTEMWEB%.TWikiRegistration"}% %TMPL:END%
+%MAKETEXT{"See [_1] for a list of existing users or register as new user in [_2]." args="%USERSWEB%.%WIKIUSERSTOPIC%, %SYSTEMWEB%.TWikiRegistration"}% %TMPL:END%
 %TMPL:DEF{"in_a_group"}%
 ---+++ %MAKETEXT{"[_1] is in at least one group and cannot be removed" args="%PARAM1%"}%
 
