Item109: phase1 of TWikiAdmin->WikiAdmin
git-svn-id: http://svn.foswiki.org/trunk@671 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/templates/messages.tmpl
+++ b/core/templates/messages.tmpl
@@ -175,7 +175,7 @@
 %TMPL:DEF{"password_not_changed"}%
 ---+++ %MAKETEXT{"Password could not be changed"}%
 
-%MAKETEXT{"Your system may not support changing passwords through TWiki. Check with your TWiki administrator."}%
+%MAKETEXT{"Your system may not support changing passwords through TWiki. Check with your Wiki administrator."}%
 
 *[[%TOPIC%][%MAKETEXT{"OK"}%]]*
 %TMPL:END%
@@ -354,7 +354,7 @@ __%MAKETEXT{"Note:"}%__
    * %MAKETEXT{"A =.txt= extension is appended to some filenames for security reasons"}%
    * %MAKETEXT{"Some characters such as =&#126;=, =$=, =@=, =%= are removed"}%
    * %MAKETEXT{"International (8-bit) characters are removed (replaced by US-ASCII equivalents for Latin-1)"}%
-%MAKETEXT{"You may be able to get your TWiki administrator to change the settings if they are inappropriate for your environment."}%
+%MAKETEXT{"You may be able to get your Wiki administrator to change the settings if they are inappropriate for your environment."}%
 
 %TMPL:P{"oktopicaction"}%
 %TMPL:END%
