--- a/core/templates/login.tmpl
+++ b/core/templates/login.tmpl
@@ -73,7 +73,7 @@
 %{ please keep the spaces between the div and the TMPL seealsonote, it allows TWiki to process the emailaddress }%
 %TMPL:DEF{"seealsostep"}%<div class="twikiFormStep twikiGrayText twikiLast"> %TMPL:P{"seealsonote"}% </div><!-- /twikiFormStep-->%TMPL:END%
 
-%TMPL:DEF{"seealsonote"}% %MAKETEXT{"If you have any questions, please contact [_1]" args="%IF{"defined WIKIWEBMASTER AND $WIKIWEBMASTER != ''" then="%WIKIWEBMASTER%" else="your TWiki administrator"}%"}% %TMPL:END%
+%TMPL:DEF{"seealsonote"}% %MAKETEXT{"If you have any questions, please contact [_1]" args="%IF{"defined WIKIWEBMASTER AND $WIKIWEBMASTER != ''" then="%WIKIWEBMASTER%" else="your Wiki administrator"}%"}% %TMPL:END%
 
 %TMPL:DEF{"form"}%<div id="twikiLogin">
 <div class="twikiFormSteps">%TMPL:P{"formstart"}%%TMPL:P{"titlestep"}%
