Item109: TWikiGroups -> WikiGroups
git-svn-id: http://svn.foswiki.org/trunk@682 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/templates/messages.tmpl
+++ b/core/templates/messages.tmpl
@@ -462,14 +462,14 @@ __%MAKETEXT{"Note:"}%__
 
 %MAKETEXT{"Contact [_1] if you have any questions." args="<a href=\"mailto:%WIKIWEBMASTER%?subject=%ENCODE{"%PARAM1% access denied for '%WEB%.%TOPIC%'"}%\">%WIKIWEBMASTER%</a>"}%
 
-__%MAKETEXT{"Related topics:"}%__ %USERSWEB%.TWikiGroups, %SYSTEMWEB%.AccessControl %TMPL:END%
+__%MAKETEXT{"Related topics:"}%__ %USERSWEB%.WikiGroups, %SYSTEMWEB%.AccessControl %TMPL:END%
 %TMPL:DEF{"only_group"}%
 %MAKETEXT{"Only members of the [_1] are allowed to perform this action." args="%PARAM1%"}%
 
 %MAKETEXT{"Contact [_1] if you have any questions." args="<a href=\"mailto:%WIKIWEBMASTER%?subject=%ENCODE{"Access Denied for '%WEB%.%TOPIC%', needs '%PARAM1%'"}%\">%WIKIWEBMASTER%</a>"}%
 
 
-__%MAKETEXT{"Related topics:"}%__ %USERSWEB%.TWikiGroups, %SYSTEMWEB%.AccessControl
+__%MAKETEXT{"Related topics:"}%__ %USERSWEB%.WikiGroups, %SYSTEMWEB%.AccessControl
 %TMPL:END%
 %TMPL:DEF{"no_such_web"}%
 ---++ %MAKETEXT{"The [_1] web does not exist" args="\"%WEB%\""}%
