--- a/core/templates/messages.tmpl
+++ b/core/templates/messages.tmpl
@@ -44,7 +44,7 @@
 ---+++ %MAKETEXT{"Can't find user [_1]" args="%PARAM1%"}%
 %MAKETEXT{"Please make sure you spelled the [_1] correctly and try again. If you get stuck, please mail [_2]." args="%SYSTEMWEB%.LoginName, %WIKIWEBMASTER%"}%
 
-%MAKETEXT{"See [_1] for a list of existing users or register as new user in [_2]." args="%USERSWEB%.%WIKIUSERSTOPIC%, %SYSTEMWEB%.TWikiRegistration"}% %TMPL:END%
+%MAKETEXT{"See [_1] for a list of existing users or register as new user in [_2]." args="%USERSWEB%.%WIKIUSERSTOPIC%, %SYSTEMWEB%.UserRegistration"}% %TMPL:END%
 %TMPL:DEF{"in_a_group"}%
 ---+++ %MAKETEXT{"[_1] is in at least one group and cannot be removed" args="%PARAM1%"}%
 
@@ -253,7 +253,7 @@
 
 %MAKETEXT{"Did you want to ~[~[[_1]~]~[reset [_2]'s password~]~]?" args="%SCRIPTURLPATH{"view"}%/TWiki.ResetPassword?username=%PARAM1%,%PARAM1%"}%
 
-%MAKETEXT{"Alternatively hit back to go back to TWiki.TWikiRegistration and choose a different username."}%
+%MAKETEXT{"Alternatively hit back to go back to %SYSTEMWEB%.UserRegistration and choose a different username."}%
 
 %MAKETEXT{"Please contact [_1] if you have any questions." args="<a href='mailto:%WIKIWEBMASTER%?subject=%ENCODE{"%WIKITOOLNAME% Registration Question"}%'>%WIKIWEBMASTER%</a>"}%
 %TMPL:END%
