Item205: More TWiki. -> %SYSTEMWEB% again again
git-svn-id: http://svn.foswiki.org/trunk@758 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/templates/messages.tmpl
+++ b/core/templates/messages.tmpl
@@ -251,7 +251,7 @@
 ---+++ %MAKETEXT{"You are already registered"}%
 %MAKETEXT{"You cannot register twice, the name [_1] is already registered." args="'%PARAM1%'"}%
 
-%MAKETEXT{"Did you want to ~[~[[_1]~]~[reset [_2]'s password~]~]?" args="%SCRIPTURLPATH{"view"}%/TWiki.ResetPassword?username=%PARAM1%,%PARAM1%"}%
+%MAKETEXT{"Did you want to ~[~[[_1]~]~[reset [_2]'s password~]~]?" args="%SCRIPTURLPATH{"view"}%/%SYSTEMWEB%.ResetPassword?username=%PARAM1%,%PARAM1%"}%
 
 %MAKETEXT{"Alternatively hit back to go back to %SYSTEMWEB%.UserRegistration and choose a different username."}%
 
