--- a/core/templates/messages.tmpl
+++ b/core/templates/messages.tmpl
@@ -84,7 +84,7 @@
 %TMPL:END%
 
 %TMPL:DEF{"not_wikiword"}%
----+++ %MAKETEXT{"New topic name [_1] is not a [_2]" args="\"<nop>%PARAM1%\", %SYSTEMWEB%.WikiWord"}%
+---+++ %MAKETEXT{"New topic name [_1] is not a [_2]" args="\"<nop>%PARAM1%\", <nop>WikiWord"}%
 %MAKETEXT{"Please go back in your browser and choose a topic name that is a [_1].WikiWord or check the allow non-Wiki Word box" args="%SYSTEMWEB%"}%
 %TMPL:END%
 
