--- a/PatternSkin/templates/form.pattern.tmpl
+++ b/PatternSkin/templates/form.pattern.tmpl
@@ -1,2 +1,2 @@
 %TMPL:INCLUDE{"form"}%
-%TMPL:DEF{"changeform"}%<input type="submit" name="action_replaceform" value='%MAKETEXT{"Replace form..."}%' class="twikiChangeFormButton twikiButton" onclick="suppressTWikiSaveValidation()" />%TMPL:END%
+%TMPL:DEF{"changeform"}%<input type="submit" name="action_replaceform" value='%MAKETEXT{"Replace form..."}%' class="twikiChangeFormButton twikiButton" onclick="suppressSaveValidation()" />%TMPL:END%
