Item273: rename twiki.tmpl -> foswiki.tmpl
git-svn-id: http://svn.foswiki.org/trunk@906 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/PatternSkin/templates/foswiki.pattern.tmpl
+++ b/PatternSkin/templates/foswiki.pattern.tmpl
@@ -1,4 +1,4 @@
-%TMPL:INCLUDE{"twiki"}%%TMPL:INCLUDE{"viewtopicactionbuttons"}%%TMPL:INCLUDE{"viewbottombar"}%
+%TMPL:INCLUDE{"foswiki"}%%TMPL:INCLUDE{"viewtopicactionbuttons"}%%TMPL:INCLUDE{"viewbottombar"}%
 
 %TMPL:DEF{"sep"}%<span class='twikiSeparator'>&nbsp;|&nbsp;</span>%TMPL:END%
 %TMPL:DEF{"LOG_IN"}%%MAKETEXT{"Log In"}%%TMPL:END%
