--- a/core/templates/rdiff.tmpl
+++ b/core/templates/rdiff.tmpl
@@ -1,4 +1,4 @@
-%{ This is a default template }%%TMPL:INCLUDE{"twiki"}%
+%{ This is a default template }%%TMPL:INCLUDE{"foswiki"}%
 %TMPL:INCLUDE{"search"}%
 
 %TMPL:DEF{"titleaction"}%%MAKETEXT{"([_1] vs. [_2])" args="%REVTITLE2%, %REVTITLE1%"}%%TMPL:END%
