--- a/core/templates/view.tmpl
+++ b/core/templates/view.tmpl
@@ -1,4 +1,4 @@
-%{ This is a default template }%%TMPL:INCLUDE{"twiki"}%
+%{ This is a default template }%%TMPL:INCLUDE{"foswiki"}%
 
 %TMPL:INCLUDE{"viewtopicactionbuttons"}%
 
