--- a/core/templates/viewprint.tmpl
+++ b/core/templates/viewprint.tmpl
@@ -1,4 +1,4 @@
-%{ This is a default template }%%TMPL:INCLUDE{"twiki"}%
+%{ This is a default template }%%TMPL:INCLUDE{"foswiki"}%
 
 %TMPL:DEF{"form"}%%META{"form"}%%TMPL:END%
 %TMPL:DEF{"attachments"}%%META{"attachments"}%%TMPL:END%
