--- a/core/templates/login.tmpl
+++ b/core/templates/login.tmpl
@@ -1,4 +1,4 @@
-%{ This is a default template }%%TMPL:INCLUDE{"twiki"}%
+%{ This is a default template }%%TMPL:INCLUDE{"foswiki"}%
 
 %TMPL:DEF{"webaction"}%%MAKETEXT{"TWiki User Authentication"}%%TMPL:END%
 %TMPL:DEF{"titleaction"}%%MAKETEXT{"(login)"}% %TMPL:END%
