--- a/core/templates/oopschangelanguage.tmpl
+++ b/core/templates/oopschangelanguage.tmpl
@@ -1,4 +1,4 @@
-%{ This is a default template }%%TMPL:INCLUDE{"twiki"}%
+%{ This is a default template }%%TMPL:INCLUDE{"foswiki"}%
 %TMPL:DEF{"titleaction"}% %MAKETEXT{"(change language)"}% %TMPL:END%
 %TMPL:DEF{"webaction"}%%TMPL:END%
 %TMPL:DEF{"heading"}%%MAKETEXT{"Change language"}%%TMPL:END%
