Item23: some style adjustments to fit in the foswiki logo
git-svn-id: http://svn.foswiki.org/trunk@961 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/PatternSkin/pub/System/PatternSkin/style.css
+++ b/PatternSkin/pub/System/PatternSkin/style.css
@@ -582,6 +582,7 @@ a.twikiLinkInHeaderRight {
 #twikiLogo img {
 	margin:0;
 	padding:0;
+        border:0px;
 }
 .twikiNoBreak {
 	white-space:nowrap;
@@ -743,6 +744,9 @@ html>body #patternLeftBarContents li { /* Mozilla */
 }
 
 /* form options in top bar */
+.patternMetaMenu {
+        padding-top:12px;
+}
 .patternMetaMenu input,
 .patternMetaMenu select,
 .patternMetaMenu select option {
