--- a/PatternSkin/templates/viewtopbar.pattern.tmpl
+++ b/PatternSkin/templates/viewtopbar.pattern.tmpl
@@ -15,4 +15,9 @@
 #patternTopBarContents {
 	height:64px; /* top bar height; make room for header columns */
 	overflow:hidden;
+}
+#twikiLogo {
+        position:absolute;
+        top:-5px;
+        left:0px;
 }%TMPL:END%
