Item116: rebrand javascript classes
git-svn-id: http://svn.foswiki.org/trunk@980 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/PatternSkin/templates/edit.pattern.tmpl
+++ b/PatternSkin/templates/edit.pattern.tmpl
@@ -9,7 +9,7 @@
 <script type="text/javascript" src="%PUBURLPATH%/%SYSTEMWEB%/JavascriptFiles/foswiki_edit.js"></script>
 <script type="text/javascript" src="%PUBURLPATH%/%SYSTEMWEB%/PatternSkin/pattern_edit.js"></script>
 <script>
-twiki.Event.addLoadEvent(initForm);
+foswiki.Event.addLoadEvent(initForm);
 </script>%TMPL:END%
 
 
