--- a/PatternSkin/templates/settings.pattern.tmpl
+++ b/PatternSkin/templates/settings.pattern.tmpl
@@ -4,7 +4,7 @@
 <script type="text/javascript" src="%PUBURLPATH%/%SYSTEMWEB%/JavascriptFiles/foswiki_edit.js"></script>
 <script type="text/javascript" src="%PUBURLPATH%/%SYSTEMWEB%/PatternSkin/pattern_edit.js"></script>
 <script>
-twiki.Event.addLoadEvent(initForm);
+foswiki.Event.addLoadEvent(initForm);
 </script>%TMPL:END%
 
 %TMPL:DEF{"titleaction"}%%MAKETEXT{"(set preferences)"}% %TMPL:END%
